# python-amazon-sp-api

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  a.json  credentials.yml  dev-requirements.txt  f.json  f.xml  generate_changelog.py  llms.txt  mssql.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  x.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-generator.yml  codeql-analysis.yml  manual.yml  pylint.yml  python-publish.yml  version_increment.yml
api/orders/: orders.py
api/sellers/: sellers.py
auth/: access_token_client.py  credentials.py
base/: client.py  marketplaces.py
docs/: .gitignore  architecture.rst  async.rst  button.py  client_usage.rst  conf.py  config_file.rst  cookieconsent.py  credentials.rst  endpoints.rst  enums.rst  env_variables.rst  examples.rst  exceptions.rst  foo.rst  from_code.rst  index.rst  installation.rst  llms.txt  pii.rst  quickstart.rst  requirements.txt  responses.rst  testing.rst  utils.rst  versions.rst
docs/_static/: button.css  cookie.js  cookieconsent.min.js  cookieconsent.min.map  custom.css  favicon.ico.f  fireworks.html
docs/_templates/: footer.html  layout.html
docs/endpoints/: aplus_content.rst  application_integrations.rst  application_management.rst  authorization.rst  awd.rst  awd_v2024_05_09.rst  catalog.rst  catalog_items.rst  catalog_items_v2020_12_01.rst  catalog_items_v2022_04_01.rst  data_kiosk.rst  delivery_by_amazon.rst  easy_ship.rst  feeds.rst  (+73 more)
endpoints_v2/: convert.py
generators/: model_generator.py
make_endpoint/: make_docs.py  make_endpoint  make_endpoint.py  template.py.jinja2
sdk_generator/: README.md  _run.py  _run_p.py  pyproject.toml
sdk_generator/swagger_to_model/: __init__.py  cli.py  generate_model_tests.py  generator.py  get_tree.py  parser.py  post_processor.py
sdk_generator/swagger_to_model/templates/: __init__.py.j2  api_init.py.j2  base_client.py.j2  base_client.pyi.j2  base_models.py.j2  client.py.j2  model.py.j2
sp_api/: __init__.py  __version__.py
swagger_models/: catalog_items.json  fba_inventory.json
tests/: base.py  helpers.py  test_base.py  test_helpers.py
(+1450 files in other folders)
