[build-system]
requires = ["setuptools>=67.7.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swagger-to-model"
version = "0.1.0"
description = "Convert Swagger/OpenAPI specifications to Pydantic v2 models"
requires-python = ">=3.12"
authors = [
    {name = "Michael Primke", email = "michael@clairinsights.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "jinja2>=3.1.6",
    "click>=8.1.3",
    "httpx>=0.24.1",
    "typing-extensions>=4.7.0",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "cachetools>=6.1.0",
    "confuse>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "flake8>=6.0.0",
    "PyYAML>=6.0",
    "jinja2>=3.1.6",
    "click>=8.1.3",
    "httpx>=0.24.1",
    "typing-extensions>=4.7.0",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
]

[project.scripts]
swagger-to-model = "swagger_to_model.cli:cli"

[tool.setuptools]
packages = ["swagger_to_model"]

[tool.setuptools.package-data]
swagger_to_model = ["templates/*.j2"]
